force-app/main/default/objects/Artical__c/Artical__c.object-meta.xml
<CustomObject>
    <label>Article</label>
    <nameField>
        <displayFormat>AR-{0000}</displayFormat>
        <label>Article Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Articles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>