force-app/main/default/objects/Artical__c/fields/Insurance_Value__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Value__c</fullName>
    <label>Insurance Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>