force-app/main/default/objects/Artical__c/fields/Item_Name__c.field-meta.xml
<CustomField>
    <fullName>Item_Name__c</fullName>
    <label>Item Name</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Item_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sofa: 1 Seater</fullName>
            </value>
            <value>
                <fullName>Sofa: 2 Seater</fullName>
            </value>
            <value>
                <fullName>Sofa: 3 Seater</fullName>
            </value>
            <value>
                <fullName>Centre Table</fullName>
            </value>
            <value>
                <fullName>Side Table</fullName>
            </value>
            <value>
                <fullName>Dining table - 4 Seater</fullName>
            </value>
            <value>
                <fullName>Dining table - 8 Seater</fullName>
            </value>
            <value>
                <fullName>Dining Chair</fullName>
            </value>
            <value>
                <fullName>Table</fullName>
            </value>
            <value>
                <fullName>Chair</fullName>
            </value>
            <value>
                <fullName>Single Cot</fullName>
            </value>
            <value>
                <fullName>Single Mattress</fullName>
            </value>
            <value>
                <fullName>Double Cot, D/ ND</fullName>
            </value>
            <value>
                <fullName>Double Mattress</fullName>
            </value>
            <value>
                <fullName>Baby Cot</fullName>
            </value>
            <value>
                <fullName>Deewan</fullName>
            </value>
            <value>
                <fullName>Dressing table</fullName>
            </value>
            <value>
                <fullName>Small Cupboard</fullName>
            </value>
            <value>
                <fullName>Large Cupboard (Almirah)</fullName>
            </value>
            <value>
                <fullName>Show case - 5 Feet</fullName>
            </value>
            <value>
                <fullName>Book Rack</fullName>
            </value>
            <value>
                <fullName>Shoe Rack</fullName>
            </value>
            <value>
                <fullName>Side Board</fullName>
            </value>
            <value>
                <fullName>Chest of Draw</fullName>
            </value>
            <value>
                <fullName>Wooden Chest</fullName>
            </value>
            <value>
                <fullName>TV - Portable</fullName>
            </value>
            <value>
                <fullName>TV - 21&quot;</fullName>
            </value>
            <value>
                <fullName>TV - 29&quot;</fullName>
            </value>
            <value>
                <fullName>TV LCD / Plasma</fullName>
            </value>
            <value>
                <fullName>TV Trolley</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>