force-app/main/default/objects/Artical__c/fields/Item_Type__c.field-meta.xml
<CustomField>
    <fullName>Item_Type__c</fullName>
    <label>Item Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Enquiry_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vehicles</fullName>
            </value>
            <value>
                <fullName>Kitchen</fullName>
            </value>
            <value>
                <fullName>Hall</fullName>
            </value>
            <value>
                <fullName>Bedroom</fullName>
            </value>
            <value>
                <fullName>Cabin</fullName>
            </value>
            <value>
                <fullName>Conference Room</fullName>
            </value>
            <value>
                <fullName>Meeting Room</fullName>
            </value>
            <value>
                <fullName>Other Item</fullName>
            </value>
            <value>
                <fullName>Paintings</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>